Swiper image sticking out in small screens fixed

--- a/styles.css
+++ b/styles.css
@@ -199,7 +199,7 @@ h1 {
   margin-bottom: 0.75rem;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) {
   .swiper-slide img {
     max-height: 370px;
   }
